option(
  'docdir',
  type: 'string',
  description: 'documentation directory',
)
option(
  'man-pages',
  type: 'feature',
  value: 'enabled',
  description: 'install manpages',
)
option(
  'python-bin',
  type: 'string',
  description: 'path to the python binary',
)
option(
  'uuctl',
  type: 'feature',
  value: 'disabled',
  description: 'install uuctl',
)
option(
  'fumon',
  type: 'feature',
  value: 'disabled',
  description: 'install fumon',
)
option(
  'uwsm-app',
  type: 'feature',
  value: 'disabled',
  description: 'install uwsm-app',
)
