option(
  'docdir',
  type: 'string',
  description: 'documentation directory',
)
option(
  'doc_examples_subdir',
  type: 'string',
  value: 'example-units',
  description: 'Directory name under doc/uwsm/ for example files'
)
option(
  'man-pages',
  type: 'feature',
  value: 'enabled',
  description: 'install manpages',
)
option(
  'python-bin',
  type: 'string',
  value: 'python3',
  description: 'path to the python binary',
)
option(
  'uuctl',
  type: 'feature',
  value: 'disabled',
  description: 'install uuctl',
)
option(
  'fumon',
  type: 'feature',
  value: 'disabled',
  description: 'install fumon',
)
option(
  'uwsm-app',
  type: 'feature',
  value: 'disabled',
  description: 'install uwsm-app',
)
option(
  'static-units',
  type: 'feature',
  value: 'enabled',
  description: 'install static units',
)
