option(
  'docdir',
  type: 'string',
  description: 'documentation directory',
)
option(
  'doc_examples_subdir',
  type: 'string',
  value: 'example-units',
  description: 'Directory name under doc/uwsm/ for example files'
)
option(
  'man-pages',
  type: 'feature',
  value: 'enabled',
  description: 'install manpages',
)
option(
  'python-bin',
  type: 'string',
  value: 'python3',
  description: 'name or path of the python binary (always canonicalized to path during build)',
)
option(
  'sh-bin',
  type: 'string',
  value: 'sh',
  description: 'name or path of the sh binary',
)
option(
  'whiptail-bin',
  type: 'string',
  value: 'whiptail',
  description: 'name or path of the whiptail binary',
)
option(
  'waitpid-bin',
  type: 'string',
  value: 'waitpid',
  description: 'name or path of the waitpid binary',
)
option(
  'canonicalize-bins',
  type: 'feature',
  value: 'disabled',
  description: 'canonicalize *-bin options with non-path values into paths during build',
)
option(
  'uuctl',
  type: 'feature',
  value: 'disabled',
  description: 'install uuctl',
)
option(
  'fumon',
  type: 'feature',
  value: 'disabled',
  description: 'install fumon',
)
option(
  'fumon-preset',
  type: 'feature',
  value: 'enabled',
  description: 'enable fumon.service in systemd preset',
)
option(
  'ttyautolock',
  type: 'feature',
  value: 'disabled',
  description: 'install ttyautolock',
)
option(
  'ttyautolock-preset',
  type: 'feature',
  value: 'disabled',
  description: 'enable ttyautolock@.service in systemd preset',
)
option(
  'wait-tray',
  type: 'feature',
  value: 'disabled',
  description: 'install wait-tray',
)
option(
  'uwsm-app',
  type: 'feature',
  value: 'disabled',
  description: 'install uwsm-app',
)
option(
  'static-units',
  type: 'feature',
  value: 'enabled',
  description: 'install static units',
)
