example_files = [
  'cliphist.desktop',
  'cliphist.service',
  'hyprpaper.service',
  'kanshi.desktop',
  'kanshi.service',
  'swayidle.service',
  'uu2gslice.sh',
  'waybar.desktop',
  'waybar.service',
  'waybar_override.conf',
]

install_data(example_files, install_dir: PKG_DOC_DIR / get_option('doc_examples_subdir'))
